# password_generator_wasm

./: Cargo.toml  README.md
src/: lib.rs
src/components/: mod.rs  model.rs  password_generator.rs
static/: index.html  styles.css
