[package]
name = "wasm_password_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.67"
web-sys = { version = "0", features = ["Range", "Selection", "HtmlLiElement"] }
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
